Centered children of auto-grid and prevent of word wrap on buttons

--- a/src/styles/scss/utils/_mixins.scss
+++ b/src/styles/scss/utils/_mixins.scss
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   text-decoration: none;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 @mixin navbar {
@@ -46,6 +47,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 6rem 1rem;
+  justify-items: center;
+  & > * {
+    width: 100%;
+  }
 
   @media (max-width: 800px) {
     grid-template-columns: repeat(2, 1fr);
